--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+        classpath "org.aspectj:aspectjtools:1.9.7"
+        classpath "org.aspectj:aspectjweaver:1.9.7"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
